# kube-web-view

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  hooks.py  pyproject.toml  skaffold.yaml
deploy/: deployment.yaml  rbac.yaml
deploy/base/: deployment.yaml
deploy/oidc/: configmap.yaml  kustomization.yaml  oidc-configmap.yaml  oidc-deployment.yaml  oidc-service.yaml  patch.yaml
docs/: alternatives.rst  conf.py  customization.rst  features.rst  index.rst  setup.rst  vision.rst
examples/oauth2-logs-authorization/: README.md  hooks.py
kube_web/: __init__.py  cluster_discovery.py  example_hooks.py  jinja2_filters.py  joins.py  kubernetes.py  main.py  resource_registry.py  web.py
kube_web/templates/: base.html  clusters.html  resource-list.html  resource-logs.html  resource-view.html
kube_web/templates/assets/: kube-web.js
kube_web/templates/partials/: navbar.html  yaml.html
scripts/: setup-venv.sh
tests/e2e/: conftest.py  deployment.yaml  test-resources.yaml  test_list.py  test_search.py
tests/unit/: test_web.py
